Fixing color contrast issues in Studio
AC-727
began changing colors in course content, files and uploads, and when creating a course

finished fixing contrast issues on files and uploads page

fixed advanced settings and issue with hovering in files and uploads

fixed color issues in studio home page and when hovering

fixed contrast in updates, pages, textbooks, and group configurations

fixed issues when configuring a section of a course in course outline

fixed hovering colors to make contrast more visible

fixed colors on the green button

AC-727

--- a/cms/static/sass/elements/_modal-window.scss
+++ b/cms/static/sass/elements/_modal-window.scss
@@ -114,7 +114,7 @@
             @extend %t-regular;
             background-image: none;
             background-color: $white;
-            color: $mediumGrey;
+            color: $gray-d1;
             border-radius: 0;
             box-shadow: none;
             border: 0;
@@ -122,11 +122,11 @@
             text-transform: uppercase;
             &:hover {
               background-color: $white;
-              color: $blue;
+              color: $uxpl-blue-base;
             }
             &.active {
-              border-bottom: 4px solid $blue-d2;
-              color: $offBlack;
+              border-bottom: 4px solid $uxpl-blue-base;
+              color: $uxpl-blue-base;
             }
           }
         }
@@ -191,7 +191,7 @@
       }
 
       a {
-        color: $blue;
+        color: $blue-d2;
 
         &:hover {
           color: $blue-s2;
